--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         align-items: center;
         color: rgb(4, 4, 128);
     }
+    h1{
+        color: red;
+    }
 </style>
 <body>
-    This is after Login
+    <h1>This is after Login</h1>
 </body>
 </html>
